cryptocurrency/ delete  now compliant with openAPI spec.
